# app/controllers/state.controller.ts
@@ -1,13 +1,24 @@
 import { State, IState } from '../models/state.model';
 import { Request, Response } from "express";
 import { get } from 'lodash';
+import { Op } from "../../database";
 
 class StateController {
   async findAll(request: Request, response: Response): Promise<Response> {
     const query: any = request.query;
 
+    const where: any = {};
+
+    if (query && query.descricao) {
+      where.descricao = { [Op.iLike]: `%${query.descricao}%` };
+    }
+    
+    if (query && query.sigla) {
+      where.sigla = query.sigla;
+    }
+
     try {
-      const state = await State.findAll();
+      const state = await State.findAll({ where, limit: 30, offset: 0 });
       return response.status(200).json(state);
     } catch (e) {
       return response.status(500).send("Erro ao pesquisar registro");
